--- a/style.css
+++ b/style.css
@@ -1,25 +1,48 @@
 body {
-    font-family: Arial, sans-serif;
-}
-
-.container {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    font-family: "Manrope", sans-serif;
+    background-color: #36e3c3;
 }
 
 h1 {
     text-align: center;
 }
+.container {
+    max-width: 500px;
+    margin: auto;
+    margin-top: 50px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #e6e3e3;
+    box-shadow: 5px 5px 15px #888888;
+}
+
+
 
 .todo-input {
-    width: 100%;
+    width: 75%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+.todo-button {
+    padding:10px 15px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 5px;
+}
+
+.todo-button:hover {
+    background-color: #555;
+}
+
+.todo-button:active {
+    background-color: #000;
 }
 
 .todo-item {
