--- a/style.css
+++ b/style.css
@@ -1,60 +1,136 @@
 body {
+    margin: 0;
+    height: 100vh;
     font-family: "Manrope", sans-serif;
     background-color: #36e3c3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+hr {
+    width: 100%;
+    border: 2px solid #0000006d;
+    border-radius: 50px;
 }
 
 h1 {
     text-align: center;
 }
+
+h1,p {
+    margin:0;
+}
+
+input[type="text"]::placeholder {
+    color: #c5c3c3;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+
+}
+
+.input{
+    position: relative;
+    display: flex;
+}
+
 .container {
-    max-width: 500px;
-    margin: auto;
-    margin-top: 50px;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 3rem;
+    height: 50%;
+    width: 60%;
+    max-width: 30rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color: #e6e3e3;
     box-shadow: 5px 5px 15px #888888;
 }
 
 
-
 .todo-input {
-    width: 75%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    position: relative;
+    display: flex;
+    width: 85%;
+    border: none;
+    border-radius: 15px;
+    padding: 0.75rem;
+    font-size: 1rem
 }
 
-.todo-button {
-    padding:10px 15px;
+.btnAdd {
+    padding:0.65rem 0.65rem;
+    font-size: 1.1rem;
     background-color: #333;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
     margin-left: 5px;
+    position: absolute;
+    right: 0.42rem;
+    bottom: 0rem;
 }
 
-.todo-button:hover {
+.btnAdd:hover {
     background-color: #555;
 }
 
-.todo-button:active {
+.btnAdd:active {
     background-color: #000;
 }
 
-.todo-item {
+.btnDel {
+    padding:0.5rem 0.5rem;
+    font-size: 0.7rem;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.btnDel:hover {
+    background-color: #555;
+}
+
+.btnDel:active {
+    background-color: #000;
+}
+
+.counterPg {
+    font-size: 12px;
+}
+
+.countContainer {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    height: 1rem;
+    padding: 0.5rem;
 }
 
-.todo-item input[type="checkbox"] {
-    margin-right: 10px;
+.countContainer p {
+    align-self: center;
 }
 
-.todo-item label {
-    flex-grow: 1;
+.scrollList {
+    height: 14rem;
+    color: #000;
 }
+
+
+
