--- a/style.css
+++ b/style.css
@@ -41,6 +41,29 @@ li {
 
 }
 
+input[type="checkbox"] {
+    cursor: pointer;
+}
+
+input[type="checkbox"]::before {
+    content: "\2713";
+    display: inline-block;
+    width: 1.6rem;
+    height: 1.6rem;
+    font-size: 1.3rem;
+    text-align: center;
+    border: 0.04rem solid #000;
+    border-radius: 20%;
+    color: transparent;
+}
+
+input[type="checkbox"]:checked::before {
+    color:#fff;
+    background-color: #36e3c3;
+    border: 0.04rem solid #36e3c3;
+    border-radius: 20%;
+}
+
 .input{
     position: relative;
     display: flex;
@@ -61,7 +84,7 @@ li {
 }
 
 
-.todo-input {
+.todoInput {
     position: relative;
     display: flex;
     width: 85%;
@@ -103,6 +126,7 @@ li {
     cursor: pointer;
 }
 
+
 .btnDel:hover {
     background-color: #555;
 }
@@ -127,10 +151,37 @@ li {
     align-self: center;
 }
 
+.disabled {
+    display: flex;
+    text-decoration: line-through;
+}
+
 .scrollList {
     height: 14rem;
     color: #000;
 }
 
+.scrollList::-webkit-scrollbar {
+    width: 0.5rem;
+}
 
+.scrollList::-webkit-scrollbar-thumb {
+    background-color: #333;
+    border-radius: 10px;
+}
 
+.scrollList::-webkit-scrollbar-track {
+    background-color: #e6e3e3;
+    border-radius: 10px;
+}
+
+#todoList p {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+#todoList .disabled {
+    color: #b7b7b7
+}
