--- a/style.css
+++ b/style.css
@@ -48,20 +48,20 @@ input[type="checkbox"] {
 input[type="checkbox"]::before {
     content: "\2713";
     display: inline-block;
-    width: 1.6rem;
-    height: 1.6rem;
-    font-size: 1.3rem;
+    width: 1rem;
+    height: 1rem;
+    font-size: 0.75rem;
     text-align: center;
     border: 0.04rem solid #000;
-    border-radius: 20%;
+    border-radius: 30%;
     color: transparent;
 }
 
 input[type="checkbox"]:checked::before {
-    color:#fff;
+    color:#000;
     background-color: #36e3c3;
-    border: 0.04rem solid #36e3c3;
-    border-radius: 20%;
+    border: 0.04rem solid #000;
+    border-radius: 30%;
 }
 
 .input{
