--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ li {
 }
 
 input[type="checkbox"] {
+    display: inline-block;
+    appearance: none;
     cursor: pointer;
 }
 
@@ -85,13 +87,22 @@ input[type="checkbox"]:checked::before {
 
 
 .todoInput {
-    position: relative;
     display: flex;
     width: 85%;
     border: none;
     border-radius: 15px;
     padding: 0.75rem;
     font-size: 1rem
+}
+
+.todoContainer {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.disabled {
+    text-decoration: line-through;
+    color: #949292;
 }
 
 .btnAdd {
@@ -177,9 +188,8 @@ input[type="checkbox"]:checked::before {
 
 #todoList p {
     display: flex;
-    flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
+    align-items: center;
 }
 
 #todoList .disabled {
