--- a/style-dark.css
+++ b/style-dark.css
@@ -1,21 +1,18 @@
-* {transition: color 0.2s ease-in-out,
-      background-color 0.2s ease-in-out;
-}
-
-a {
-    text-decoration: none;
-
-}
-
 body {
     margin: 0;
     height: 100vh;
     font-family: "Manrope", sans-serif;
-    background-color: #36e3c3;
+    background-color: #000;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+}
+
+a{
+    text-decoration: none;
+    color: #fff;
+
 }
 
 hr {
@@ -33,7 +30,7 @@ h1,p {
 }
 
 input[type="text"]::placeholder {
-    color: #c5c3c3;
+    color: #646363;
 }
 
 ul {
@@ -63,14 +60,14 @@ input[type="checkbox"]::before {
     height: 1rem;
     font-size: 0.75rem;
     text-align: center;
-    border: 0.04rem solid #000;
+    border: 0.04rem solid #bdbcbc;
     border-radius: 30%;
     color: transparent;
 }
 
 input[type="checkbox"]:checked::before {
     color:#000;
-    background-color: #36e3c3;
+    background-color: #bebebe;
     border: 0.04rem solid #000;
     border-radius: 30%;
 }
@@ -88,10 +85,10 @@ input[type="checkbox"]:checked::before {
     height: 50%;
     width: 60%;
     max-width: 30rem;
-    border: 1px solid #ccc;
+    border: 1px solid #2d2d2d;
     border-radius: 15px;
-    background-color: #e6e3e3;
-    box-shadow: 5px 5px 15px #888888;
+    background-color: #575656;
+    box-shadow: 5px 5px 15px #4e4d4d;
 }
 
 
@@ -111,7 +108,7 @@ input[type="checkbox"]:checked::before {
 
 .disabled {
     text-decoration: line-through;
-    color: #949292;
+    color: #959393;
 }
 
 .btnAdd {
@@ -169,6 +166,7 @@ input[type="checkbox"]:checked::before {
 
 .countContainer p {
     align-self: center;
+    color: #fff;
 }
 
 .disabled {
@@ -178,7 +176,7 @@ input[type="checkbox"]:checked::before {
 
 .scrollList {
     height: 14rem;
-    color: #000;
+    color: #f1f1f1;
 }
 
 .scrollList::-webkit-scrollbar {
@@ -202,5 +200,5 @@ input[type="checkbox"]:checked::before {
 }
 
 #todoList .disabled {
-    color: #b7b7b7
+    color: #e0dede
 }
